--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="ec38f6b5-9210-468b-9089-9d30b9b1b87d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     <!-- Hotjar Tracking Code for shmup.com -->
     <script>
