--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="ec38f6b5-9210-468b-9089-9d30b9b1b87d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+    <script type="text/javascript">
+      $crisp.push(["safe", true]);
+    </script>
     <!-- Hotjar Tracking Code for shmup.com -->
     <script>
       (function(h,o,t,j,a,r){
