--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,23 @@
         a.appendChild(r);
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+      
+    <script
+      src="https://browser.sentry-cdn.com/5.21.3/bundle.min.js"
+      integrity="sha384-fToiA54hoY6d6KAxhmTRMeYUFgOcig4WzZfZTJdJ0FWhC9yrnxA3dnqFvFVXMzFQ"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://browser.sentry-cdn.com/5.21.3/vue.min.js"
+      integrity="sha384-HvKPtlBmUYHo02VaRMvZbJL7PLFvYy7c0c3c9ZaY5M3OtiY2ywraZe8au7WtLbCH"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      Sentry.init({
+        dsn: "https://bf7fe4a7fe794de8a5cbd53a3870468b@o438398.ingest.sentry.io/5403013",
+        integrations: [new Sentry.Integrations.Vue({ Vue, attachProps: true })],
+      });
+    </script>
   </head>
   <body>
     <noscript>
