--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,7 @@
     ></script>
     <script>
       Sentry.init({
-        dsn: "https://bf7fe4a7fe794de8a5cbd53a3870468b@o438398.ingest.sentry.io/5403013",
-        integrations: [new Sentry.Integrations.Vue({ Vue, attachProps: true })],
+        dsn: "https://bf7fe4a7fe794de8a5cbd53a3870468b@o438398.ingest.sentry.io/5403013"
       });
     </script>
   </head>
